# MilkatAI

./: README.md
apps/web/: README.md  package-lock.json  package.json
apps/web/prisma/: schema.prisma
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: AccessCodeCard.tsx  (+10 more)
scripts/: README.md
services/scraper-bot/: README.md  environment.yml  pyproject.toml  requirements.txt
services/scraper-bot/src/milkatai_scraper_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/scraper-bot/src/scraper_bot/: __init__.py  anyror_scraper.py  cli.py  compare_pipeline.py  config.py  http_client.py  logger.py  main.py  models.py
services/scraper-bot/src/scraper_bot/api/: __init__.py  main.py  routes.py
services/scraper-bot/src/scraper_bot/core/: __init__.py  config.py  http_client.py  logger.py  models.py
services/scraper-bot/src/scraper_bot/scrapers/: __init__.py  base.py
services/scraper-bot/src/scraper_bot/scrapers/anyror/: __init__.py  scraper.py
services/scraper-bot/src/scraper_bot/scrapers/garvi/: __init__.py  scraper.py
services/scraper-bot/src/scraper_bot/scrapers/gujrerar/: __init__.py  scraper.py
services/scraper-bot/src/scraper_bot/scrapers/iora/: __init__.py  scraper.py
services/scraper-bot/src/scraper_bot/scrapers/rajkot_edu/: __init__.py  scraper.py
services/scraper-bot/src/scraper_bot/scrapers/rajkot_uda/: __init__.py  scraper.py
services/scraper-bot/src/scraper_bot/scrapers/revenue/: __init__.py  scraper.py
services/scraper-bot/src/scraper_bot/scrapers/rmc/: __init__.py  scraper.py
(+33 files in other folders)
