[project]
name = "milkatai-scraper-bot"
version = "0.1.0"
description = "Scraper bots for MilkatAI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4==4.12.3",
  "lxml==5.2.2",
  "requests==2.32.3",
  "playwright==1.46.0",
  "pydantic==2.8.2",
  "python-dotenv==1.0.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

